fix header spacing

--- a/app/javascript/components/page.module.css
+++ b/app/javascript/components/page.module.css
@@ -14,7 +14,6 @@
     font-weight: 900;
     z-index: 1;
     line-height: 0.9;
-    padding-bottom: 0.2em;
     hyphens: auto;
     word-break: break-word;
 }
@@ -28,7 +27,7 @@
 
 .header {
     min-height: 10rem;
-    margin-bottom: 2rem;
+    margin-bottom: 3.5rem;
     display: flex;
     flex-direction: column;
     justify-content: flex-end;
@@ -69,6 +68,7 @@
 }
 
 .logo {
+    margin-top: -1rem;
     margin-bottom: auto;
     align-self: flex-start;
 }
